Fix website title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Rinconada Labs | Privacy Policy</title>
 </head>
     <body>
-        <h1>Privacy Policy</h1>
+        <h1>Rinconada Labs Privacy Policy</h1>
 
         <p>Last updated: May 22, 2020</p>
 
